# domain/entities/polls/__init__.py
@@ -1,0 +1,3 @@
+from .feedback import Feedback
+from .poll import Poll
+from .stats import Stats
