# domain/entities/polls/requests/create_poll_request.py
@@ -1,0 +1,6 @@
+class CreatePollRequest():
+    def __init__(self, principal, community_name, community_size, feedbacks):
+        self.principal = principal
+        self.community_name = community_name
+        self.community_size = community_size
+        self.feedbacks = feedbacks
