# domain/entities/polls/stats.py
@@ -1,0 +1,5 @@
+class Stats():
+    def __init__(self, title, count, percentage):
+        self.title = title
+        self.count = count
+        self.percentage = percentage
